--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       <nav class="navbar navbar-expand-lg navbar-dark">
 
-        <a class="navbar-brand" href="">tindog</a>
+        <a class="navbar-brand" href=""> <img src="images/logo.png" id="logo" height="80px" alt=""> </a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
             <span class="navbar-toggler-icon"></span>
@@ -60,13 +60,13 @@
       <div class="row">
 
         <div class="col-lg-6">
-          <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
+          <h1 class="big-heading">Experience the fastes network Seep ever with <strong>Dwifi</strong>.</h1>
           <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
           <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
         </div>
 
         <div class="col-lg-6">
-          <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
+          <img class="title-image" src="images/landing screen.png" alt="iphone-mockup">
         </div>
 
       </div>
@@ -86,19 +86,19 @@
         <div class="feature-box col-lg-4">
           <i class="icon fas fa-check-circle fa-4x"></i>
           <h3 class="feature-title">Easy to use.</h3>
-          <p>So easy to use, even your dog could do it.</p>
+          <p>Easy to use, and user friendlly UI for better understanding .</p>
         </div>
 
         <div class="feature-box col-lg-4">
           <i class="icon fas fa-bullseye fa-4x"></i>
-          <h3 class="feature-title">Elite Clientele</h3>
-          <p>We have all the dogs, the greatest dogs.</p>
+          <h3 class="feature-title">Smuth Experience</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit..</p>
         </div>
 
         <div class="feature-box col-lg-4">
-          <i class="icon fas fa-heart fa-4x"></i>
-          <h3 class="feature-title">Guaranteed to work.</h3>
-          <p>Find the love of your dog's life or your money back.</p>
+          <i class="icon fas fa-shield-alt fa-4x"></i>
+          <h3 class="feature-title">Stay Protected</h3>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
       </div>
 
@@ -114,12 +114,12 @@
     <div id="testimonial-carousel" class="carousel slide" data-ride="false">
       <div class="carousel-inner">
         <div class="carousel-item active container-fluid">
-          <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+          <h2 class="testimonial-text">Easy to use and very fast perfect for my home and office very good service..</h2>
           <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
           <em>Pebbles, New York</em>
         </div>
         <div class="carousel-item container-fluid">
-          <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
+          <h2 class="testimonial-text">very easy to connect and app make very easy to track the usage of data</h2>
           <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
           <em>Beverly, Illinois</em>
         </div>
@@ -150,18 +150,18 @@
 
   <section class="white-section" id="pricing">
 
-    <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
-    <p>Simple and affordable price plans for your and your dog.</p>
+    <h2 class="section-heading">A Plan for Every Ons`s Needs</h2>
+    <p>Simple and affordable price plans for enjoing fast and relayeable network</p>
 
     <div class="row">
 
       <div class="pricing-column col-lg-4 col-md-6">
         <div class="card">
           <div class="card-header">
-            <h3>Chihuahua</h3>
+            <h3>Basic</h3>
           </div>
           <div class="card-body">
-            <h2 class="price-text">Free</h2>
+            <h2 class="price-text">$29 / mo</h2>
             <p>5 Matches Per Day</p>
             <p>10 Messages Per Day</p>
             <p>Unlimited App Usage</p>
