--- a/index.html
+++ b/index.html
@@ -192,10 +192,10 @@
           </div>
           <div class="card-body">
             <h2 class="price-text">$99 / mo</h2>
-            <p>Pirority Listing</p>
-            <p>Unlimited Matches</p>
-            <p>Unlimited Messages</p>
-            <p>Unlimited App Usage</p>
+            <p> Pirority Listing </p>
+            <p> Unlimited Matches </p>
+            <p> Unlimited Messages </p>
+            <p> Unlimited App Usage </p>
             <button class="btn btn-lg btn-block btn-dark" type="button">Sign Up</button>
 
           </div>
@@ -215,7 +215,7 @@
 
     <div class="container-fluid">
 
-      <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
+      <h3 class="big-heading">Find the the best WIFI service for your home or office or both Today.</h3>
       <button class="download-button btn btn-lg btn-dark" type="button"><i class="fab fa-apple"></i> Download</button>
       <button class="download-button btn btn-lg brn-light" type="button"><i class="fab fa-google-play"></i> Download</button>
     </div>
@@ -230,7 +230,7 @@
       <i class="social-icon fab fa-twitter"></i>
       <i class="social-icon fab fa-instagram"></i>
       <i class="social-icon fas fa-envelope"></i>
-      <p>© Copyright 2018 TinDog</p>
+      <p>© Copyright 2018 Dwifi</p>
     </div>
   </footer>
 
