--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
           </div>
           <div class="card-body">
             <h2 class="price-text">$29 / mo</h2>
-            <p>5 Matches Per Day</p>
-            <p>10 Messages Per Day</p>
-            <p>Unlimited App Usage</p>
+            <p>60 MBPS Speed</p>
+            <p>3TB DATA </p>
+            <p>24/7 whatsapp and call Support</p>
             <button class="btn btn-lg btn-block btn-outline-dark" type="button">Sign Up</button>
           </div>
         </div>
@@ -177,9 +177,9 @@
           </div>
           <div class="card-body">
             <h2 class="price-text">$49 / mo</h2>
-            <p>Unlimited Matches</p>
-            <p>Unlimited Messages</p>
-            <p>Unlimited App Usage</p>
+            <p>80 MBPS Speed</p>
+            <p>6TB DATA </p>
+            <p>24/7 whatsapp and call Support  </p>
             <button class="btn btn-lg btn-block btn-dark" type="button">Sign Up</button>
           </div>
         </div>
@@ -192,10 +192,10 @@
           </div>
           <div class="card-body">
             <h2 class="price-text">$99 / mo</h2>
-            <p> Pirority Listing </p>
-            <p> Unlimited Matches </p>
-            <p> Unlimited Messages </p>
-            <p> Unlimited App Usage </p>
+            <p> 100 MBPS Speed</p>
+            <p> ULIMITED DATA </p>
+            <p> Onsite service </p>
+            <p> 24/7 whatsapp and call Support </p>
             <button class="btn btn-lg btn-block btn-dark" type="button">Sign Up</button>
 
           </div>
