--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
       <div class="row">
 
         <div class="col-lg-6">
-          <h1 class="big-heading">Experience the fastes network Seep ever with <strong>Dwifi</strong>.</h1>
-          <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
-          <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
+          <h1 class="big-heading">Experience the fastest network speed ever with <strong>Dwifi</strong>.</h1>
+          <button type="button" class="btn btn-dark btn-lg download-button">Get now</button>
+          <button type="button" class="btn btn-outline-light btn-lg download-button">plans</button>
         </div>
 
         <div class="col-lg-6">
@@ -82,23 +82,27 @@
 
     <div class="container-fluid">
 
-      <div class="row">
+      <div class="row FeaturesROW">
         <div class="feature-box col-lg-4">
-          <i class="icon fas fa-check-circle fa-4x"></i>
-          <h3 class="feature-title">Easy to use.</h3>
-          <p>Easy to use, and user friendlly UI for better understanding .</p>
+          <svg class="icon " xmlns="http://www.w3.org/2000/svg" width="70" height="70" fill="currentColor" class="bi bi-router-fill" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M5.525 3.025a3.5 3.5 0 0 1 4.95 0 .5.5 0 1 0 .707-.707 4.5 4.5 0 0 0-6.364 0 .5.5 0 0 0 .707.707ZM6.94 4.44a1.5 1.5 0 0 1 2.122 0 .5.5 0 0 0 .707-.707 2.5 2.5 0 0 0-3.536 0 .5.5 0 0 0 .707.707ZM2.974 2.342a.5.5 0 1 0-.948.316L3.806 8H1.5A1.5 1.5 0 0 0 0 9.5v2A1.5 1.5 0 0 0 1.5 13H2a.5.5 0 0 0 .5.5h2A.5.5 0 0 0 5 13h6a.5.5 0 0 0 .5.5h2a.5.5 0 0 0 .5-.5h.5a1.5 1.5 0 0 0 1.5-1.5v-2A1.5 1.5 0 0 0 14.5 8h-2.306l1.78-5.342a.5.5 0 1 0-.948-.316L11.14 8H4.86L2.974 2.342ZM2.5 11a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1Zm4.5-.5a.5.5 0 1 0 1 0 .5.5 0 0 0-1 0Zm2.5.5a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1Zm1.5-.5a.5.5 0 1 0 1 0 .5.5 0 0 0-1 0Zm2 0a.5.5 0 1 0 1 0 .5.5 0 0 0-1 0Zm-4.5-5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0Z"/>
+          </svg>
+          <h3 class="feature-title">Free Router</h3>
+          <p>Free Router / ont worth more then $50 no hidden charges</p>
         </div>
 
         <div class="feature-box col-lg-4">
-          <i class="icon fas fa-bullseye fa-4x"></i>
-          <h3 class="feature-title">Smuth Experience</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit..</p>
+          <svg class="icon " xmlns="http://www.w3.org/2000/svg" width="70" height="70" fill="currentColor" class="bi bi-gear-fill" viewBox="0 0 16 16">
+            <path d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z"/>
+          </svg>
+          <h3 class="feature-title">NO Installation Charge</h3>
+          <p>Compliantly free installation by our best engineers as per your needs</p>
         </div>
 
         <div class="feature-box col-lg-4">
           <i class="icon fas fa-shield-alt fa-4x"></i>
-          <h3 class="feature-title">Stay Protected</h3>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <h3 class="feature-title">NO Security Deposit</h3>
+          <p>No security deposit fees required for any booking or installation. </p>
         </div>
       </div>
 
@@ -151,7 +155,7 @@
   <section class="white-section" id="pricing">
 
     <h2 class="section-heading">A Plan for Every Ons`s Needs</h2>
-    <p>Simple and affordable price plans for enjoing fast and relayeable network</p>
+    <p>Simple and affordable price plans for enjoying fast and reliable network</p>
 
     <div class="row">
 
@@ -188,12 +192,12 @@
       <div class="pricing-column col-lg-4">
         <div class="card">
           <div class="card-header">
-            <h3>Enterprice</h3>
+            <h3>Enterprise</h3>
           </div>
           <div class="card-body">
-            <h2 class="price-text">$99 / mo</h2>
+            <h2 class="price-text">$69 / mo</h2>
             <p> 100 MBPS Speed</p>
-            <p> ULIMITED DATA </p>
+            <p> UNLIMITED DATA </p>
             <p> Onsite service </p>
             <p> 24/7 whatsapp and call Support </p>
             <button class="btn btn-lg btn-block btn-dark" type="button">Sign Up</button>
@@ -215,9 +219,8 @@
 
     <div class="container-fluid">
 
-      <h3 class="big-heading">Find the the best WIFI service for your home or office or both Today.</h3>
-      <button class="download-button btn btn-lg btn-dark" type="button"><i class="fab fa-apple"></i> Download</button>
-      <button class="download-button btn btn-lg brn-light" type="button"><i class="fab fa-google-play"></i> Download</button>
+      <h3 class="big-heading">Tell us about your custom configurations and business needs.  </h3>
+      <button class="download-button btn btn-lg btn-dark" type="button"> <i class="fab fa-whatsapp fa-2x"></i> <span id="wtappBTN-text">let`s talk...</span> </button>
     </div>
   </section>
 
